Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8641

Incorrect scope resolution for script in a script block.

    XMLWordPrintable

Details

    • f9d3a346b0cd65e63f3a0856b55478e10a670766, 64a4b25fac94fc5c9b75ab31690c658e95189797

    Description

      1. If called from a signal handler with args, the args should not be available in the script block. This is caused by the way secondaryScope is handled in QDeclarativeExpression.
      2. When the script is in a separate file, the global variables in that file should be searched before the component properties.

      autotest qdeclarativeecmascript::scriptScope tests these.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              aakenned Aaron Kennedy
              brasser Michael Brasser (closed Nokia identity) (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes