Save secondary scope inside the expression's scope object

This prevents the secondary scope from contaminating scopes outside itself
when used as a signal expression.

QTBUG-8641